# VideoCapturingTool

./: CMakeLists.txt  README.md
include/: MotionDetector.hpp
sources/: MotionDetector.cpp  main.cpp
